--- a/ng-grid.css
+++ b/ng-grid.css
@@ -206,24 +206,24 @@
     -moz-border-radius-bottomleft: 3px;
     border-bottom-left-radius: 3px;
     border: 1px solid #494949;
-    background: #494949 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat;
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -moz-linear-gradient(top,  #494949 0%, #202020 100%);
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#494949), color-stop(100%,#202020));
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-linear-gradient(top,  #494949 0%,#202020 100%);
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -o-linear-gradient(top,  #494949 0%,#202020 100%);
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -ms-linear-gradient(top,  #494949 0%,#202020 100%);
+    background: #494949 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -moz-linear-gradient(top,  #494949 0%, #202020 100%);
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#494949), color-stop(100%,#202020));
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-linear-gradient(top,  #494949 0%,#202020 100%);
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -o-linear-gradient(top,  #494949 0%,#202020 100%);
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -ms-linear-gradient(top,  #494949 0%,#202020 100%);
     background: linear-gradient(top,  #494949 0%,#202020 100%);
     overflow: visible;
     width: 25px;
 }
 .ngPagerControl input.ngpagerFirst[type="button"][disabled] {
     border: 1px solid #838383;
-    background: #838383 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat;
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -moz-linear-gradient(top,  #838383 0%, #6b6b6b 100%);
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#838383), color-stop(100%,#6b6b6b));
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-linear-gradient(top,  #838383 0%,#6b6b6b 100%);
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -o-linear-gradient(top,  #838383 0%,#6b6b6b 100%);
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xng-ZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -ms-linear-gradient(top,  #838383 0%,#6b6b6b 100%);
+    background: #838383 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -moz-linear-gradient(top,  #838383 0%, #6b6b6b 100%);
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#838383), color-stop(100%,#6b6b6b));
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -webkit-linear-gradient(top,  #838383 0%,#6b6b6b 100%);
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -o-linear-gradient(top,  #838383 0%,#6b6b6b 100%);
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAYAAACprHcmAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEdJREFUeNpi+P///xkgZiAGMzHgBmfQBZiIVQgCLAQUnsFn8hk8zsLrZoKKTfApxuZmEyTnmBDjDBNS3YyhgREUM8QCgAADAGwVKoyxIp1uAAAAAElFTkSuQmCC) 50% 50% no-repeat, -ms-linear-gradient(top,  #838383 0%,#6b6b6b 100%);
     background: linear-gradient(top,  #838383 0%,#6b6b6b 100%);
     width: 25px;
     cursor: auto;
@@ -282,7 +282,7 @@
 }
 /*---------- LAST PAGE ----------*/
 .ngPagerControl input.ngpagerLast[type="button"] {
-    -webkit-border-top-right-radius: 3px;
+     -webkit-border-top-right-radius: 3px;
     -moz-border-radius-topright: 3px;
     border-top-right-radius: 3px;
     -webkit-border-bottom-right-radius: 3px;
@@ -298,7 +298,7 @@
     background: linear-gradient(top,  #494949 0%,#202020 100%);
     width: 25px;
 }
-.ngPagerControl input.ngpagerLast[type="button"][disabled] {
+.ngPagerControl input.ngpagerlast[type="button"][disabled] {
     border: 1px solid #838383;
     background: #838383 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAALCAYAAABLcGxfAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEVJREFUeNqUUckNADAIUtOR2H+C7kTTv7TCE8MVk2QY2KUOSlEvt45cH8fLY5rQJlWYmAjQbYCoAScBTiUolzQ/HUeAAQDjeAzfPT7YJAAAAABJRU5ErkJggg==) 50% 50% no-repeat;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAALCAYAAABLcGxfAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAEVJREFUeNqUUckNADAIUtOR2H+C7kTTv7TCE8MVk2QY2KUOSlEvt45cH8fLY5rQJlWYmAjQbYCoAScBTiUolzQ/HUeAAQDjeAzfPT7YJAAAAABJRU5ErkJggg==) 50% 50% no-repeat, -moz-linear-gradient(top,  #838383 0%, #6b6b6b 100%);
