--- a/ng-grid.css
+++ b/ng-grid.css
@@ -60,6 +60,7 @@ div.ngHeaderCell:last-child{
 
 /******** Rows ********/
 .ngRow {
+    position: absolute;
     border-bottom: 1px solid rgb(229, 229, 229);
     cursor: pointer;
 }
