--- a/ng-grid.css
+++ b/ng-grid.css
@@ -9,6 +9,12 @@
 .ngGrid {
     background-color: rgb(253, 253, 253);
 	border: 1px solid rgb(212,212,212);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 /******** Header ********/
