Fixed bug in dom utility

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -29,6 +29,10 @@
     font-weight: bold;
 }
 
+.ngHeaderScroller {
+	position:absolute;
+}
+
 .ngHeaderCell {
     position: absolute;
     background-color: rgb(234, 234, 234); 
