Changed cursor for column header.

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -32,6 +32,9 @@
 .ngHeaderScroller {
 	position:absolute;
 }
+.ngHeaderSortColumn{
+	cursor: pointer;
+}
 
 .ngHeaderCell {
     position: absolute;
