--- a/ng-grid.css
+++ b/ng-grid.css
@@ -233,18 +233,38 @@ input {
     user-select: none;
 }
 
-.ngAggregateClosed {
+.ngAggregate {
     position: absolute;
     background-color: rgb(95,168,184);
-    width: 100%;
-    height: 100%;
-    padding-bottom: 1px;
+    top: 1;
+    bottom: 1px;
+    right: 0;
+    padding-top: 3px;
 }
 
-.ngAggregateOpen {
+.ngAggregateText {
     position: absolute;
-    background-color: darkgray;
-    width: 100%;
-    height: 100%;
-    padding-bottom: 1px;
+    left: 27px;
+}
+
+.ngAggArrowExpanded {
+    position: absolute;
+    left: 8px;
+    bottom: 10px;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 0 10px 10px;
+    border-color: transparent transparent #000000 transparent;
+}
+
+.ngAggArrowCollapsed {
+    position: absolute;
+    left: 8px;
+    bottom: 10px;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 5px 0 5px 8.7px;
+    border-color: transparent transparent transparent #000000;
 }
