--- a/ng-grid.css
+++ b/ng-grid.css
@@ -1,4 +1,9 @@
-﻿/******** Grid Global ********/
+﻿.ng-scope {
+	margin: 0;
+	padding: 0;
+}
+
+/******** Grid Global ********/
 .nglabel {
     display: block;
     float: left;
@@ -18,6 +23,46 @@
 }
 
 /******** Header ********/
+
+.ngGroupPanel{
+    background-color: rgb(234, 234, 234);
+    overflow: hidden;
+	border-bottom: 1px solid rgb(212,212,212);
+}
+
+.ngGroupList {
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+.ngGroupItem{
+	background-color: rgb(247,247,247);
+	border: 1px solid rgb(212,212,212);
+	padding: 3px 10px;
+	float: left;
+	margin-left: 10px;
+	margin-top: 2px;
+	border-radius: 3px;
+	font-weight:bold;
+	float: left;
+}
+
+.ngGroupItem:first-child{
+	margin-left: 5px;
+}
+
+.ngGroupArrow {
+	width: 0; 
+	height: 0; 
+	border-top: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	border-left: 6px solid black;
+	margin-top: 10px;
+	margin-left: 5px;
+	float: right;
+}
+
 .ngTopPanel {
     background-color: rgb(234, 234, 234);
     overflow: hidden;
@@ -109,11 +154,6 @@ div.ngHeaderCell:last-child{
 	position: absolute;
     top: 11px; 
     left: 6px;
-}
-
-.ng-scope {
-	margin: 0;
-	padding: 0;
 }
 
 input[type="checkbox"] {
