--- a/ng-grid.css
+++ b/ng-grid.css
@@ -36,20 +36,28 @@
 	padding: 0px;
 }
 
-.ngGroupItem{
+.ngGroupItem {
+	float: left; 
+}
+
+.ngGroupElement {
+	height: 100%; 
+	width: 100%;
+}	
+
+.ngGroupName{
 	background-color: rgb(247,247,247);
 	border: 1px solid rgb(212,212,212);
 	padding: 3px 10px;
 	float: left;
-	margin-left: 10px;
+	margin-left: 0px;
 	margin-top: 2px;
 	border-radius: 3px;
 	font-weight:bold;
-	float: left;
 }
 
 .ngGroupItem:first-child{
-	margin-left: 5px;
+	margin-left: 2px;
 }
 
 .ngGroupArrow {
@@ -60,6 +68,7 @@
 	border-left: 6px solid black;
 	margin-top: 10px;
 	margin-left: 5px;
+	margin-right: 5px;
 	float: right;
 }
 
