--- a/stylesheets/ng-grid.css
+++ b/stylesheets/ng-grid.css
@@ -1,4 +1,9 @@
-﻿/******** Grid Global ********/
+﻿.ng-scope {
+	margin: 0;
+	padding: 0;
+}
+
+/******** Grid Global ********/
 .nglabel {
     display: block;
     float: left;
@@ -18,6 +23,74 @@
 }
 
 /******** Header ********/
+
+.ngGroupPanel{
+    background-color: rgb(234, 234, 234);
+    overflow: hidden;
+	border-bottom: 1px solid rgb(212,212,212);
+}
+
+.ngGroupPanelDescription{
+	margin-top: 5px;
+	margin-left: 5px;
+}
+
+.ngGroupList {
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+.ngGroupItem {
+	float: left; 
+}
+
+.ngGroupElement {
+	float: left;
+	height: 100%; 
+	width: 100%;
+}	
+
+.ngGroupName{
+	background-color: rgb(247,247,247);
+	border: 1px solid rgb(212,212,212);
+	padding: 3px 10px;
+	float: left;
+	margin-left: 0px;
+	margin-top: 2px;
+	border-radius: 3px;
+	font-weight:bold;
+}
+
+.ngGroupItem:first-child{
+	margin-left: 2px;
+}
+
+.ngRemoveGroup {
+	width: 5px;
+	float:right;
+	opacity: 0.4;
+	margin-top: -1px;
+	margin-left: 5px;
+}
+.ngRemoveGroup:hover {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+	opacity: 0.7;
+}
+.ngGroupArrow {
+	width: 0; 
+	height: 0; 
+	border-top: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	border-left: 6px solid black;
+	margin-top: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
+	float: right;
+}
+
 .ngTopPanel {
     background-color: rgb(234, 234, 234);
     overflow: hidden;
@@ -109,11 +182,6 @@ div.ngHeaderCell:last-child{
 	position: absolute;
     top: 11px; 
     left: 6px;
-}
-
-.ng-scope {
-	margin: 0;
-	padding: 0;
 }
 
 input[type="checkbox"] {
@@ -231,4 +299,42 @@ input {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.ngAggregate {
+    position: absolute;
+    background-color: rgb(95,168,184);
+    top: 1px;
+    bottom: 1px;
+    right: 0;
+	left: 0;
+    padding-top: 3px;
+}
+
+.ngAggregateText {
+    position: absolute;
+    left: 27px;
+	top:3px;
+}
+
+.ngAggArrowExpanded {
+    position: absolute;
+    left: 8px;
+    bottom: 10px;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 0 9px 9px;
+    border-color: transparent transparent #000000 transparent;
+}
+
+.ngAggArrowCollapsed {
+    position: absolute;
+    left: 8px;
+    bottom: 10px;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 5px 0 5px 8.7px;
+    border-color: transparent transparent transparent #000000;
 }
