--- a/ng-grid.css
+++ b/ng-grid.css
@@ -100,8 +100,8 @@
 }
 
 .ngTopPanel {
+    position: relative;
     background-color: rgb(234, 234, 234);
-    overflow: hidden;
 	border-bottom: 1px solid rgb(212,212,212);
 }
 .ngHeaderContainer {
@@ -114,8 +114,9 @@
 	position:absolute;
 }
 .ngHeaderSortColumn{
-	cursor: pointer;
+	position:absolute;
     overflow: hidden;
+	cursor: pointer;
 }
 
 .ngHeaderCell{
@@ -311,4 +312,43 @@ input {
     border-style: solid;
     border-width: 5px 0 5px 8.7px;
     border-color: transparent transparent transparent #000000;
+}
+
+.ngHeaderButton {
+    position: absolute;    
+    right: 2px;
+    top: 8px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+    z-index: 10000;
+    background-color: rgb(179, 191, 188);
+    cursor: pointer;
+    /* width and height can be anything, as long as they're equal */
+}
+.ngHeaderButtonArrow {
+    position: absolute;
+    top: 4px;
+    left: 3px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 6.5px 4.5px 0 4.5px;
+    border-color: #000 transparent transparent transparent;
+    /* width and height can be anything, as long as they're equal */
+}
+.ngColMenu {
+    top: 15px;
+    background-color: rgb(189, 208, 203);
+    position: absolute;
+    width: 80px;
+}
+.ngColList {
+    list-style-type: none;
+}
+
+.ngColListItem {
+    
 }
