--- a/src/templates/aggregateTemplate.html
+++ b/src/templates/aggregateTemplate.html
@@ -1,5 +1,5 @@
 <!--ng.aggregateTemplate-->
-<div ng-click="row.toggleExpand()" ng-style="{ \'left\': row.offsetleft}" class="ngAggregate">
+<div ng-click="row.toggleExpand()" ng-style="{'left': row.offsetleft}" class="ngAggregate">
     <span class="ngAggregateText">{{row.label CUSTOM_FILTERS}} ({{row.totalChildren()}} items)</span>
     <div class="{{row.aggClass()}}"></div>
 </div>
