--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -1,6 +1,6 @@
 <!--ng.defaultGridTemplate-->
-<div ng-class="{\'ui-widget\': jqueryUITheme}">
-    <div class="ngTopPanel" ng-class="{\'ui-widget-header\':jqueryUITheme, \'ui-corner-top\': jqueryUITheme}" ng-style="topPanelStyle()">
+<div ng-class="{'ui-widget': jqueryUITheme}">
+    <div class="ngTopPanel" ng-class="{'ui-widget-header':jqueryUITheme, 'ui-corner-top': jqueryUITheme}" ng-style="topPanelStyle()">
         <div class="ngGroupPanel" ng-show="showGroupPanel()" ng-style="headerStyle()">
             <div class="ngGroupPanelDescription" ng-show="configGroups.length == 0">Drag a column header here and drop it to group by that column</div>
             <ul ng-show="configGroups.length > 0" class="ngGroupList">
@@ -28,27 +28,28 @@
                 <span class="ngMenuText">Choose Columns:</span>
                 <ul class="ngColList">
                     <li class="ngColListItem" ng-repeat="col in columns | ngColumns">
-                        <label><input type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}} <a ng-hide="col.field == \'\\u2714\'" class="ngColListCheckbox" ng-click="groupBy(col)">{}</a></label>
+                        <label><input type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}}</label>
+                        <button ng-hide="col.field == '\u2714'" class="ngColListCheckbox" ng-click="groupBy(col)">{}</button>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="ngViewport" ng-class="{\'ui-widget-content\': jqueryUITheme}" ng-style="viewportStyle()">
+    <div class="ngViewport" ng-class="{'ui-widget-content': jqueryUITheme}" ng-style="viewportStyle()">
         <div class="ngCanvas" ng-style="canvasStyle()">
-            <div ng-style="rowStyle(row)" ng-repeat="row in renderedRows" ng-click="row.toggleSelected($event)" class="ngRow" ng-class="{\'selected\': row.selected}" ng-class-odd="row.alternatingRowClass()" ng-class-even="row.alternatingRowClass()" ng-row></div>
+            <div ng-style="rowStyle(row)" ng-repeat="row in renderedRows" ng-click="row.toggleSelected($event)" class="ngRow" ng-class="{'selected': row.selected}" ng-class-odd="row.alternatingRowClass()" ng-class-even="row.alternatingRowClass()" ng-row></div>
         </div>
     </div>
-    <div class="ngFooterPanel" ng-class="{\'ui-widget-content\': jqueryUITheme, \'ui-corner-bottom\': jqueryUITheme}" ng-style="footerStyle()">
+    <div class="ngFooterPanel" ng-class="{'ui-widget-content': jqueryUITheme, 'ui-corner-bottom': jqueryUITheme}" ng-style="footerStyle()">
         <div class="ngTotalSelectContainer" ng-show="footerVisible">
-            <div class="ngFooterTotalItems" ng-class="{\'ngNoMultiSelect\': !multiSelect}" >
+            <div class="ngFooterTotalItems" ng-class="{'ngNoMultiSelect': !multiSelect}" >
                 <span class="ngLabel">Total Items: {{maxRows}}</span><span ng-show="filterText.length > 0" class="ngLabel">(Showing Items: {{totalFilteredItemsLength()}})</span>
             </div>
             <div class="ngFooterSelectedItems" ng-show="multiSelect">
                 <span class="ngLabel">Selected Items: {{selectedItems.length}}</span>
             </div>
         </div>
-        <div class="ngPagerContainer" style="float: right; margin-top: 10px;" ng-show="footerVisible && enablePaging" ng-class="{\'ngNoMultiSelect\': !multiSelect}">
+        <div class="ngPagerContainer" style="float: right; margin-top: 10px;" ng-show="footerVisible && enablePaging" ng-class="{'ngNoMultiSelect': !multiSelect}">
             <div style="float:left; margin-right: 10px;" class="ngRowCountPicker">
                 <span style="float: left; margin-top: 3px;" class="ngLabel">Page Size:</span>
                 <select style="float: left;height: 27px; width: 100px" ng-model="pagingOptions.pageSize" >
