adding grouping ability without drag-n-drop

--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -28,7 +28,7 @@
                 <span class="ngMenuText">Choose Columns:</span>
                 <ul class="ngColList">
                     <li class="ngColListItem" ng-repeat="col in columns | ngColumns">
-                        <label><input type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}} <a title="Group By" style="position: relative; bottom: 2px;" ng-hide="col.field == '\u2714'" ng-click="groupBy(col)">{}</a></label>
+                        <label><input type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}} <a title="Group By" class="ngGroupIcon" ng-hide="col.field == '\u2714'" ng-click="groupBy(col)"></a></label>
                         
                     </li>
                 </ul>
