--- a/css/ng-grid.css
+++ b/css/ng-grid.css
@@ -101,6 +101,7 @@
 
 .ngTopPanel {
     position: relative;
+	z-index:5;
     background-color: rgb(234, 234, 234);
 	border-bottom: 1px solid rgb(212,212,212);
 }
