--- a/partials/gettingStartedPage.html
+++ b/partials/gettingStartedPage.html
@@ -1,20 +1,47 @@
-<div class="container-fluid body rowstyles portal-contact-page">
-	<div class="content rowstyles portal-contact-content" style="margin-bottom: 20px;">
-		<h1>Getting Started</h1>
-		<div style="float: left;">
-			<div>
+<div class="container-fluid body rowstyles portal-contact-page" style=" overflow: auto">
+	<div class="content rowstyles portal-contact-content" style=" padding: 0 20px;">	
+		<h1 style="margin:0">Getting Started</h1>
+		<div style="float: left; width:500px">		
+			<div style="margin-top: 20px">
+				<p><strong>Steps for getting started (example on right):</strong></p>
 				<ol>
-					<li>Download it!</li>
+					<li>Add references to <a href="http://code.jquery.com/jquery-1.8.3.min.js">jQuery</a> and <a href="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js">AngularJS</a>.</li>
+					<li>Add references to <a href="https://github.com/timothyswt/ng-grid">ngGrid</a>'s javascript and css files.</li>
+					<li>Where you declare your app module, add ngGrid:<br /> <code>angular.module('myApp',['ngGrid']);</code><br />If you use <a target="blank" href="https://github.com/angular/angular-seed">angular seed</a>, it is in your app.js file.</li>
+					<li>In your html file within the controller where you plan to use ng-grid, add:<br /><code>&lt;div class="gridStyle" ng-grid="gridOptions"&gt;&lt;/div&gt;</code><br/>gridOptions is the variable we are going to bind to where we will initialize our grid options.</li>
+					<li>We are going to define a basic style for our grid in the html head:
+					<pre style="margin-top:10px" class="prettyprint linenums">&lt;style&gt;
+    .gridStyle {
+        border: 1px solid rgb(212,212,212);
+        width: 400px; 
+        height: 300px
+    }
+&lt;/style&gt;</pre></li>
+					<li>In your javascript file within the controller where you plan to use<br />ng-grid, lets add data that our grid will use:<br /> </li>
+					<pre style="margin-top:10px" class="prettyprint linenums">$scope.myData = [{name: "Moroni", age: 50},
+                 {name: "Tiancum", age: 43},
+                 {name: "Jacob", age: 27},
+                 {name: "Nephi", age: 29},
+                 {name: "Enos", age: 34}];</pre></li>
+					<li>Now initialize your grid options under the same controller as data:<br /><code>$scope.gridOptions = { data: 'myData' };</code></li>	
+					<li style="margin-top: 20px"><strong>Below is the outcome of the grid using the example on the right:</strong><br /> 				
 				</ol>
 			</div>
-			<div style="border: 1px solid rgb(212,212,212); width: 402px; height: 300px" ng-grid="gridOptions"></div>
+			<div style="border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-left: 25px; margin-top: 20px; " ng-grid="gridOptions"></div>
 		</div>
 		
-		<div  style="width:560px; float:right">
+		<div  style="width:580px; float:right">
 		<h3>HTML:</h3>
 		<pre class="prettyprint linenums">&lt;html ng-app="myApp"&gt;
     &lt;head&gt;
         &lt;link rel="stylesheet" type="text/css" href="ng-grid.css" /&gt;
+        &lt;style&gt;
+            .gridStyle {
+                border: 1px solid rgb(212,212,212);
+                width: 400px; 
+                height: 300px
+            }
+        &lt;/style&gt;
         &lt;script type="text/javascript" src="jquery-1.8.2.js">&lt;/script&gt;
         &lt;script type="text/javascript" src="angular.js"&gt;&lt;/script&gt;
         &lt;script type="text/javascript" src="ng-grid-1.3.2.js"&gt;&lt;/script&gt;
@@ -24,7 +51,7 @@
         &lt;/script&gt;
     &lt;/head&gt;
     &lt;body ng-controller="MyCtrl"&gt;
-        &lt;div ng-grid="gridOptions"&gt;
+        &lt;div class="gridStyle" ng-grid="gridOptions"&gt;
         &lt;/div&gt;
     &lt;/body&gt;
 &lt;/html&gt;
