--- a/ng-grid.css
+++ b/ng-grid.css
@@ -100,7 +100,8 @@
 }
 
 .ngTopPanel {
-    position: relative;
+    position: relative;	
+	z-index:5;
     background-color: rgb(234, 234, 234);
 	border-bottom: 1px solid rgb(212,212,212);
 }
