Added placeholder page for examples. Added plunker to getting started.

--- a/partials/gettingStartedPage.html
+++ b/partials/gettingStartedPage.html
@@ -66,6 +66,7 @@ app.controller('MyCtrl', function($scope) {
     $scope.gridOptions = { data: 'myData' };
 });
 </pre>	
-</div>
+		<p>View the plunker <a target="blank" href="http://plnkr.co/edit/T6qaQX">here</a>.</p>
+		</div>
 	</div>
 </div>
