--- a/partials/overviewPage.html
+++ b/partials/overviewPage.html
@@ -3,19 +3,18 @@
 	  <div class="container">
 		<div style="width: 600px; margin: auto;">
 			<h1 style="margin-bottom: 16px;">ng-grid</h1>
-			<p class="lead">Overview of ng-grid and how to get started.</p>
 		</div>
 		<div style="width: 600px; margin: auto;">
 			<div style="float:left">
-				<p>ng-grid Team:</p>
+				<p>Team members:</p>
 				<ul>
-					<li><a href="http://ornerydevelopment.blogspot.com/">Tim Sweet</a></li>
-					<li><a href="https://github.com/xcrico">Jonathon Ricaurte</a></li>
+					<li><a target="blank" href="http://ornerydevelopment.blogspot.com/">Tim Sweet</a></li>
+					<li><a target="blank" href="https://github.com/xcrico">Jonathon Ricaurte</a></li>
 				</ul>	
 				<a style="width:150px" class="btn btn-primary" href="https://github.com/angular-ui/ng-grid/zipball/master"><i class="icon-white icon-download-alt"></i> Download ZIP</a>
 			</div>
 			<div style="float:left; margin-left: 100px;">			
-				<p>License: <a href="http://www.opensource.org/licenses/mit-license.php">MIT</a></p>
+				<p>License: <a target="blank" href="http://www.opensource.org/licenses/mit-license.php">MIT</a></p>
 				<p>Dependencies: jQuery &amp; angular.js</p>
 				<a style="width:150px; margin-top: 31px" class="btn btn-primary" href="https://github.com/angular-ui/ng-grid/tarball/master"><i class="icon-white icon-download-alt"></i> Download TAR</a>
 			</div>
@@ -25,18 +24,19 @@
   <div class="row">
         <div class="span4">
           <h2>Why ng-grid?</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
         </div>
         <div class="span4">
           <h2>Alternatives</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+		  <ul>
+			<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+			<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+		  </ul>
         </div>
         <div class="span4">
-          <h2>Plugins</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>Extensible</h2>
+          <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
         </div>
     </div>
 </div>		
